base/services/ea-cloud/tsb-dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tsb-dashboard
  labels:
    app: tsb-dashboard
spec:
  type: ClusterIP
  ports:
  - name: http-port
    port: 80
    targetPort: 80
  selector:
    app: tsb-dashboard
