base/services/ea-cloud/tsb-dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tsb-dashboard
spec:
  ingressClassName: nginx
  rules:
  - host: dashboard.thaismilegroup.com
    http:
      paths:
      - backend:
          service:
            name: tsb-dashboard
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 10.21.5.11
    - ip: 10.21.5.12
    - ip: 10.21.5.13
